<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:orientation="horizontal"
    >

    <ImageView
        android:id="@+id/notification_bar_image_music"
        android:layout_width="@dimen/dp_64"
        android:layout_height="@dimen/dp_64"
        android:background="@drawable/music_image"
        android:contentDescription="@string/image_of_music"
        />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_10"
        android:paddingStart="@dimen/dp_10"
        android:paddingRight="@dimen/dp_0"
        android:paddingEnd="@dimen/dp_0"
        >

        <TextView
            android:id="@+id/notification_bar_title_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            android:text="@string/title_music"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="1"
            />

        <TextView
            android:id="@+id/notification_bar_artist_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist_music"
            android:textColor="@color/white"
            android:ellipsize="end"
            android:maxLines="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        >
        <ImageButton
            android:id="@+id/notification_bar_play_button"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/play_and_pause"
            android:scaleType="fitCenter"
            android:src="@drawable/play"
            />
        <ImageButton
            android:id="@+id/notification_bar_next_button"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:background="@drawable/next"
            android:contentDescription="@string/skip_forwards"
            />
    </LinearLayout>
    <ImageButton
        android:id="@+id/notification_bar_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/close"
        android:contentDescription="@string/close_notification"/>

</LinearLayout>