<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:clickable="false"
    android:focusable="true"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent"
        >

        <ImageView
            android:id="@+id/imageMusic"
            android:layout_width="@dimen/dp_64"
            android:layout_height="@dimen/dp_64"
            android:background="@drawable/music_image"
            android:contentDescription="@string/image_of_music"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_10"
            android:paddingStart="@dimen/dp_10"
            tools:ignore="RtlSymmetry"
            >
            <TextView
                android:id="@+id/textMusicTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/title_music"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/textMusicArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/artist_music"
                android:textColor="@color/white"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            >
            <ImageButton
                android:id="@+id/imageButtonPrevious"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:background="@drawable/previous"
                android:contentDescription="@string/previous"
                />
            <ImageButton
                android:id="@+id/imageButtonPlay"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:background="@drawable/play"
                android:contentDescription="@string/play_and_pause"
                />
            <ImageButton
                android:id="@+id/imageButtonNext"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:background="@drawable/next"
                android:contentDescription="@string/next"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
