<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_128"
    android:background="@color/colorPrimaryDark"
    android:orientation="horizontal"
    >

    <ImageView
        android:id="@+id/notification_bar_image_music"
        android:layout_width="@dimen/dp_128"
        android:layout_height="@dimen/dp_128"
        android:background="@drawable/music_image"
        android:contentDescription="@string/image_of_music"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_75"
            android:layout_weight="0.8"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_10"
                android:gravity="center_vertical"
                tools:ignore="NestedWeights"
                >

                <TextView
                    android:id="@+id/notification_bar_title_music"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_music"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="@dimen/sp_16"
                    />
                <TextView
                    android:id="@+id/notification_bar_artist_music"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/artist_music"
                    android:textColor="@color/white"
                    android:ellipsize="end"
                    android:maxLines="1"
                    />
                <TextView
                    android:id="@+id/notification_bar_album_music"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/album_music"
                    android:textColor="@color/white"
                    android:ellipsize="end"
                    android:maxLines="1"
                    />
            </LinearLayout>
            <ImageButton
                android:id="@+id/notification_bar_close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/close"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/close_notification"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/blue_gray_100"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_weight="0.2">

            <ImageButton
                android:id="@+id/notification_bar_previous_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_48"
                android:padding="@dimen/dp_5"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/previous"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/previous"
                tools:ignore="NestedWeights"
                />
            <ImageButton
                android:id="@+id/notification_bar_play_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_48"
                android:padding="@dimen/dp_5"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/pause"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/play_and_pause"
                />
            <ImageButton
                android:id="@+id/notification_bar_next_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_48"
                android:padding="@dimen/dp_5"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/next"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/next"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>